--- a/assets/scss/bases/_scaffolding.scss
+++ b/assets/scss/bases/_scaffolding.scss
@@ -22,7 +22,7 @@ html {
 body {
   background-color: $color-white;
   font-family: $font-family-first-bold;
-  font-size: $font-size-first-md;
+  // font-size: $font-size-first-md;
   color: $color-gray-3;
   // line-height: $line-height-first-default;
   letter-spacing: $letter-spacing-default;
