--- a/assets/scss/helpers/_utilities.scss
+++ b/assets/scss/helpers/_utilities.scss
@@ -7,6 +7,7 @@
 // * Ellipsis
 // * Word break
 // * Typography
+// * Hidden
 //
 // ==================================================================================================
 // //////////////////////////////////////////////////////////////////////////////////////////////////
@@ -59,4 +60,12 @@
 .text-label-form {
   @extend #{$text-style-first-md-bold};
   color: $color-gray-6;
+}
+
+// Hidden
+// ============================================================
+.hidden-mobile-md-max {
+  @media (max-width: $breakpoint-mobile-md-max) {
+    display: none;
+  }
 }
