--- a/assets/scss/pages/_contact.scss
+++ b/assets/scss/pages/_contact.scss
@@ -1,12 +1,12 @@
 // //////////////////////////////////////////////////////////////////////////////////////////////////
 // ==================================================================================================
 //
-// Navigation bar
+// Contact
 //
 // ==================================================================================================
 // //////////////////////////////////////////////////////////////////////////////////////////////////
 
-.navigationbar {
+.contact {
   // Mixins
   // >>>>>>>>>>>>>>>>>>>>>>>
 
@@ -15,42 +15,33 @@
 
   // Parent styles
   // >>>>>>>>>>>>>>>>>>>>>>>
-  position: fixed;
-  z-index: $z-index-3;
-  bottom: 0;
-  right: 0;
-  left: 0;
-
-  overflow-x: auto;
-  display: flex;
-
-  max-width: $breakpoint-mobile-lg;
-  height: $navigationbar-height;
-  margin: auto;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
 
   // Child element styles
   // >>>>>>>>>>>>>>>>>>>>>>>
-  .navigation-button {
-    @include transition(all 0.3s ease);
-    display: flex;
-    flex: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: $navigation-button-width;
-    background-color: $color-orange-1;
-
-    &.is-active {
-      background-color: $color-orange-3;
-    }
+  .contact-title {
+    margin-bottom: 10px;
   }
 
-  .navigation-icon {
-    margin-bottom: $spacing-mn;
+  .contact-message {
+    margin-bottom: 2px;
+  }
+
+  .contact-upload-file {
+    margin-bottom: 5px;
+  }
+
+  .contact-button {
+    margin-bottom: 5px;
+
+    &.is-group {
+      display: flex;
+      margin-left: -1px;
+
+      .button {
+        flex: 1;
+        margin-left: 1px;
+      }
+    }
   }
 
   // States
@@ -64,6 +55,17 @@
 
   // Media queries
   // >>>>>>>>>>>>>>>>>>>>>>>
+  // .contact-button {
+  //   &.is-group {
+  //     .button {
+  //       .button-text {
+  //         @media (max-width: $breakpoint-mobile-lg) {
+  //           font-size: 5.8vw;
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
 }
 
 // Browser variations
