--- a/assets/scss/pages/_insurance.scss
+++ b/assets/scss/pages/_insurance.scss
@@ -1,12 +1,12 @@
 // //////////////////////////////////////////////////////////////////////////////////////////////////
 // ==================================================================================================
 //
-// Navigation bar
+// Insurance
 //
 // ==================================================================================================
 // //////////////////////////////////////////////////////////////////////////////////////////////////
 
-.navigationbar {
+.insurance {
   // Mixins
   // >>>>>>>>>>>>>>>>>>>>>>>
 
@@ -15,43 +15,24 @@
 
   // Parent styles
   // >>>>>>>>>>>>>>>>>>>>>>>
-  position: fixed;
-  z-index: $z-index-3;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  .insurance-list {
+    padding-top: 45px;
+    padding-bottom: 15px;
+  }
 
-  overflow-x: auto;
-  display: flex;
+  .insurance-title {
+    margin-bottom: 20px;
+    text-align: center;
+  }
 
-  max-width: $breakpoint-mobile-lg;
-  height: $navigationbar-height;
-  margin: auto;
-
-  &::-webkit-scrollbar {
-    display: none;
+  .insurance-control {
+    padding-right: 20px;
+    padding-bottom: 15px;
+    padding-left: 20px;
   }
 
   // Child element styles
   // >>>>>>>>>>>>>>>>>>>>>>>
-  .navigation-button {
-    @include transition(all 0.3s ease);
-    display: flex;
-    flex: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: $navigation-button-width;
-    background-color: $color-orange-1;
-
-    &.is-active {
-      background-color: $color-orange-3;
-    }
-  }
-
-  .navigation-icon {
-    margin-bottom: $spacing-mn;
-  }
 
   // States
   // >>>>>>>>>>>>>>>>>>>>>>>
