--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -41,6 +41,7 @@
 @import 'components/list';
 @import 'components/thumbnail';
 @import 'components/table';
+@import 'components/loading';
 
 // Collections
 // ============================================================
