--- a/assets/scss/layouts/_navigationbar.scss
+++ b/assets/scss/layouts/_navigationbar.scss
@@ -15,21 +15,20 @@
 
   // Parent styles
   // >>>>>>>>>>>>>>>>>>>>>>>
+  overflow-x: auto;
+  overflow-y: hidden;
   position: fixed;
   z-index: $z-index-3;
   bottom: 0;
   right: 0;
   left: 0;
-
-  overflow-x: auto;
   display: flex;
-
   max-width: $breakpoint-mobile-lg;
   height: $navigationbar-height;
   margin: auto;
 
   &::-webkit-scrollbar {
-    display: none;
+    // display: none;
   }
 
   // Child element styles
