--- a/assets/scss/components/_container.scss
+++ b/assets/scss/components/_container.scss
@@ -220,8 +220,9 @@
   }
 
   &.is-except-topbar-footer {
-    margin-top: 0;
-    height: calc(100vh - #{$topbar-height} - #{$button-height-default} + 40px);
+    margin-top: $topbar-title-height;
+    // height: calc(100vh - #{$topbar-height} - #{$button-height-default} + 40px);
+    height: calc(100vh - #{$topbar-height} - #{$button-height-default} - 40px);
   }
 
   // States with modifiers
