--- a/assets/scss/helpers/_utilities.scss
+++ b/assets/scss/helpers/_utilities.scss
@@ -8,6 +8,7 @@
 // * Word break
 // * Typography
 // * Hidden
+// * Cursor
 //
 // ==================================================================================================
 // //////////////////////////////////////////////////////////////////////////////////////////////////
@@ -68,4 +69,10 @@
   @media (max-width: $breakpoint-mobile-md-max) {
     display: none;
   }
+}
+
+// Cursor
+// ============================================================
+.is-cursor {
+  cursor: pointer;
 }
